--- a/subtract/index.html
+++ b/subtract/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <button id="back">
-      <a href="\Multiply two numbers\index.html">Back</a>
+      <a href="\Maths-Operations\index.html">Back</a>
     </button>
     <h1 class="sub">Subtract two numbers</h1>
 
