--- a/subtract/index.html
+++ b/subtract/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <button id="back">
-      <a href="mathscalc.vercel.app">Back</a>
+      <a href="https://mathcalc.vercel.app/">Back</a>
     </button>
     <h1 class="sub">Subtract two numbers</h1>
 
