--- a/about/about.html
+++ b/about/about.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <button id="back">
-      <a href="mathscalc.vercel.app">Main Page</a>
+      <a href="https://mathcalc.vercel.app/">Main Page</a>
     </button>
     <h1>Hi! I am Aman Rai</h1>
     <h3>
